# job_finder

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
data/config/: company_type_weights.csv  language_weights.csv  location_weights.csv  risk_keywords.csv  role_category_weights.csv  skill_keywords.csv
docs/: PROJECT_PLAN.md
docs/adr/: 0001-csv-first.md  0002-config-driven-scoring.md  0003-prefer-public-ats-apis.md  0004-no-anti-bot-bypass.md
docs/specs/: 001-product-scope.md  002-data-contracts.md  003-csv-output-contract.md  004-company-source-model.md  005-crawl-policy.md  006-ats-adapters.md  007-normalization.md  008-scoring.md  009-testing-strategy.md  010-acceptance-checklist.md
src/jobradar/: __init__.py  cli.py
src/jobradar/config/: __init__.py  loader.py
src/jobradar/exporter/: __init__.py  csv_exporter.py
src/jobradar/scoring/: __init__.py  engine.py
tests/: test_config_loader.py  test_csv_exporter.py  test_exporter.py  test_scoring.py  test_smoke.py
tests/fixtures/: sample_jobs.csv
